[package]
name = "aott"
version = "0.3.0"
edition = "2021"
description = "Aspect Of The Tokens - a parser combinator framework."
license = "MIT"
authors = ["nothendev <borodinov.ilya@gmail.com>", "abs0luty <adisalimgereev@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Implodent/AOTT"
keywords = ["parser", "combinator", "token", "syntax"]
categories = ["parsing", "text-processing"]

[dependencies]
hashbrown = "0.14.0"
aott_derive = { path = "./derive", version = "0.3.0" }
num-traits = "0.2.16"
unicode-ident = { version = "1.0.11", optional = true }
bytes = { version = "1.4.0", optional = true }
derive_more = "0.99.17"
tracing = { version = "0.1.37", features = ["attributes"], optional = true }

[features]
std = []
builtin-text = ["dep:unicode-ident"]
builtin-bytes = []
bytes-crate = ["dep:bytes", "nightly"]
nightly = []
error-recovery = []
serialization = []
tracing = ["dep:tracing"]
default = ["std", "builtin-text", "error-recovery", "bytes-crate"]

[badges]
maintenance = { status = "actively-developed" }

[dev-dependencies]
zstd-safe = { version = "6.0.6", features = ["std"] }

[[example]]
name = "nbt"
required-features = ["builtin-bytes"]

[[example]]
name = "brainfuck"
