[package]
name = "aott"
version = "0.3.0"
edition = "2021"
description = "Aspect Of The Tokens - a parser combinator framework."
license = "MIT"
authors = ["nothendev <borodinov.ilya@gmail.com>", "abs0luty <adisalimgereev@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Implodent/AOTT"
keywords = ["parser", "combinator", "token", "syntax"]
categories = ["parsing", "text-processing"]

[[bench]]
name = "json"

[dependencies]
hashbrown = "0.14.0"
aott_derive = { path = "./derive", version = "0.3.0" }
unicode-ident = { version = "1.0.11", optional = true }
derive_more = "0.99.17"
tracing = { version = "0.1.37", features = ["attributes"], optional = true }
thiserror = "1.0.50"

[features]
builtin-text = ["dep:unicode-ident"]
builtin-bytes = []
nightly = []
error-recovery = []
serialization = []
builtin-extra = []
tracing = ["dep:tracing"]
default = ["builtin-text", "builtin-extra", "error-recovery"]

[badges]
maintenance = { status = "actively-developed" }

[dev-dependencies]
zstd-safe = { version = "6.0.6", features = ["std"] }

[[example]]
name = "brainfuck"
required-features = ["builtin-extra"]
