[package]
name = "aott_derive"
version = "0.2.0"
edition = "2021"
description = "Procedural macros for AOTT."
repository = "https://github.com/Imploent/AOTT"
license = "MIT"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"
quote = "1"
